samples/_failures_safe/1761278396_036ff7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0aebc499.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_0aebc499.c:113:29: error: ‘val’ undeclared (first use in this function); did you mean ‘val_b’?
  113 |                         if (val
      |                             ^~~
      |                             val_b
./samples/SAFE/__tmp_0aebc499.c:113:29: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0aebc499.c:113:32: error: expected ‘)’ at end of input
  113 |                         if (val
      |                            ~   ^
      |                                )
./samples/SAFE/__tmp_0aebc499.c:113:25: error: expected declaration or statement at end of input
  113 |                         if (val
      |                         ^~
./samples/SAFE/__tmp_0aebc499.c:113:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0aebc499.c:113:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0aebc499.c:113:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0aebc499.c:113:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0aebc499.c:113:25: error: expected declaration or statement at end of input
